# secrethitler

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: backend-testing.yml  continuous-integration.yml
discord_client/: .gitignore  README.md  main.py  requirements.txt
discord_client/secretHitler/: openDocs.sh  setup.py
discord_client/secretHitler/docs/: conf.py  index.rst  reference.rst
discord_client/secretHitler/secretHitler/: __init__.py  __main__.py  client.py  exceptions.py  globals.py
discord_client/tests/: game.py
flutter_client/: .gitignore  README.md  pubspec.yaml
flutter_client/android/app/: build.gradle
flutter_client/android/app/src/main/: AndroidManifest.xml
flutter_client/android/app/src/main/java/fiks/secrethitler/secrethitler/: MainActivity.java
flutter_client/android/app/src/profile/: AndroidManifest.xml
flutter_client/integration_test/: integration_test.dart
flutter_client/lib/: client.dart  logger.dart  main.dart  secrethitler_game.dart  secrethitler_home.dart
flutter_client/lib/client/: game_client.dart  http_client.dart
flutter_client/lib/game/: common.dart  game_board.dart  history_overview.dart  policy_overlay.dart  theme.dart  vote_overlay.dart
flutter_client/lib/game/themes/: fixler_theme.dart  secrethitler_theme.dart  secrethitlersvg_theme.dart
flutter_client/lib/views/: secrethitler_creategame.dart  secrethitler_game.dart  secrethitler_home.dart  secrethitler_login.dart
flutter_client/lib/widgets/: chat_widget.dart  game_board.dart  history_overview.dart  policy_overlay.dart  vote_overlay.dart
flutter_client/linux/: CMakeLists.txt  my_application.cc
flutter_client/test/: widget_test.dart
flutter_client/web/: index.html  manifest.json
web_api/: .gitignore  Cargo.toml
web_api/api/: Cargo.toml
web_api/api/src/: auth.rs  lib.rs
web_api/app/: Cargo.toml
web_api/app/src/: auth.rs
web_api/app_contract/: Cargo.toml
web_api/app_contract/src/: auth.rs
web_api/application/: Cargo.toml
web_api/application/src/game/: create_game.rs  mod.rs
web_api/dal/temp/: Cargo.toml
web_api/dal/temp/src/: games.rs
web_api/domain/: Cargo.toml
web_api/domain/src/: lib.rs
web_api/domain/src/games/: game.rs  game_repository.rs  mod.rs  player.rs  state.rs
web_api/domain/src/games/dto/: game.rs  mod.rs  player.rs
web_api/entity/: Cargo.toml
web_api/entity/src/: account.rs  auth_token.rs  lib.rs
web_api/http_api/: Cargo.toml
web_api/migration/: Cargo.toml
web_api/migration/src/: lib.rs  m20230313_131107_create_account_table.rs  m20230313_152634_create_auth_token_table.rs
web_api/reference/: Secret Hitler API.postman_collection.json  Secret-Hitler-API.yaml
web_api/src/: main.rs
web_api/src/api/: mod.rs
web_api/src/api/auth/: check.rs  logout.rs  mod.rs
web_api/src/api/auth/anonymous/: login.rs  logout.rs
web_api/src/api/graphql/: mod.rs
web_api/src/api/graphql/v1/: context.rs  hello.rs  mod.rs  mutation.rs  query.rs  subscription.rs  websocket.rs
web_api/src/api/graphql/v1/object/: mod.rs  player.rs  round.rs  slot.rs
web_api/src/app/: mod.rs
web_api/src/app/auth/: auth_service.rs  mod.rs  session.rs
web_api/src/app/game/: game.rs  mod.rs  player.rs
web_api/src/app/slot/: mod.rs  slot.rs  slot_service.rs
web_api/src/app/user/: identity.rs  mod.rs  user.rs  user_service.rs
web_api/src/middleware/: auth_middleware.rs
web_api/tests/: auth.test.js  index.js  package-lock.json  package.json
web_api/tests/graphql/: graphql_v1.test.js
