[package]
name = "secrethitler-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
futures = "0.3.21"
uuid = { version = "1.0.0", features = ["v4"] }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["subscriptions"] }
juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
serde = { version = "1.0.136", features = ["derive"] }
actix-cors = "0.6.1"
syn = "1.0.95"
async-stream = "0.3"
