[package]
name = "secrethitler-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "./app" }
app_contract = { path = "./app_contract" }
entity = { path = "./entity" }
migration = { path = "./migration" }

anyhow = { version = "1.0", features = ["backtrace"] }
axum ={ version = "0.6", features = ["json", "macros", "ws"] }
uuid = { version = "1.0", features = ["v4"] }
sea-orm = { version = "0.11", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid" ] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0", features = [] }
tokio = { version = "1", features = ["full"] }
