[package]
name = "app_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
thiserror = { version = "1.0", features = [] }
sea-orm = { version = "0.11", features = [ "sqlx-postgres", "with-uuid" ] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = [] }
